Issue 3409 Added maven-compiler-plugin
Issue 3409 Added maven-compiler-plugin